<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.guillermo.apphub.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_top_msg" />

    <Button
        android:id="@+id/btn_toSpotifyStreamerApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/btn_toSpotifyStreamerApp"/>
    <Button
        android:id="@+id/btn_toScoresApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/btn_toScoresApp" />
    <Button
        android:id="@+id/btn_toLibraryApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/btn_toLibraryApp"/>
    <Button
        android:id="@+id/btn_toBuildItBiggerApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/btn_toBuildItBiggerApp"/>
    <Button
        android:id="@+id/btn_toXYZReaderApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/btn_toXYZReaderApp"/>
    <Button
        android:id="@+id/btn_toCapstoneMyApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btn_toCapstoneMyApp"/>

</LinearLayout>
